--- a/www/src/packages/home/style/index.scss
+++ b/www/src/packages/home/style/index.scss
@@ -8,7 +8,7 @@
     padding: 0 16px;
     align-items: center;
     backdrop-filter: blur(3px);
-    background-color: rgba(255, 255, 255, 0);
+    background-color: rgba(255, 255, 255, .4);
 
     &-search {
       width: 200px;
