--- a/www/src/packages/home/style/index.scss
+++ b/www/src/packages/home/style/index.scss
@@ -16,7 +16,7 @@
   }
 
   &-header__background {
-    width: 100%;
+    width: 100vw;
     height: 240px;
     pointer-events: none;
     background-size: 100%;
