--- a/www/src/packages/home/components/Article/style.scss
+++ b/www/src/packages/home/components/Article/style.scss
@@ -13,7 +13,6 @@
   &-right {
     top: 0;
     right: 0;
-    width: 60%;
     height: 100%;
     display: flex;
     position: absolute;
@@ -22,6 +21,7 @@
     flex-direction: column;
     background-color: #fff;
     justify-content: center;
+    width: calc(50% + 100px);
     clip-path: polygon(100px 0, 100% 0, 100% 100%, 0 100%);
   }
 
