--- a/www/src/packages/home/components/Article/style.scss
+++ b/www/src/packages/home/components/Article/style.scss
@@ -8,6 +8,7 @@
   &-left {
     width: 50%;
     height: 100%;
+    position: relative;
   }
 
   &-right {
@@ -25,12 +26,29 @@
     clip-path: polygon(100px 0, 100% 0, 100% 100%, 0 100%);
   }
 
+  &-block {
+    top: 50%;
+    z-index: 2;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    left: calc(50% - 50px);
+    border: 2px solid #000000;
+    transform: translate(-50%, -50%);
+  }
+
   &-image {
+    z-index: 1;
     width: 100%;
     height: 100%;
+    pointer-events: none;
+    display: none;
     background-size: cover;
     transition: transform .3s;
     background-position: center;
+  }
+
+  &:hover &-block {
   }
 
   &:hover &-image {
@@ -42,6 +60,12 @@
     line-height: 35px;
     text-align: center;
     padding-left: 100px;
+
+    a {
+      cursor: pointer;
+      text-decoration: none;
+      color: var(--el-text-color-regular);
+    }
   }
 
   &-content {
